compiling on windows after libuhuru reorganization; everything OK except daemon

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 VS/glib/*
-VS/UhuruAV/libuhuru/Debug/*
+VS/UhuruAV/libuhuru_core/Debug/*
+VS/UhuruAV/libuhuru_ipc/Debug/*
+VS/UhuruAV/uhuru_scan/Debug/*
+VS/UhuruAV/module_5_2/Debug/*
+VS/UhuruAV/UhuruAV/Debug/
+VS/UhuruAV/UhuruScanCommandLine/Debug/
+VS/UhuruAV/libuhuru/Debug/
+VS/UhuruAV/clamav/Debug/*
+VS/UhuruAV/Debug/*
 VS/UhuruAV/UhuruAV.opensdf
 VS/UhuruAV/UhuruAV.sdf
-VS/UhuruAV/module_5_2/Debug/*
-VS/UhuruAV/Debug/*
-VS/UhuruAV/UhuruAV/Debug/*
-VS/UhuruAV/clamav/Debug/*
-VS/UhuruAV/UhuruScanCommandLine/Debug/*
 VS/UhuruAV/UhuruAV.v12.suo
