--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
@@ -126,4 +126,9 @@
       <Filter>Source Files\os\windows</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="libuhuru_core.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
