linux on-access debug; not working because of magic_desc;

--- a/modules/fanotify/conf/fanotify.conf
+++ b/modules/fanotify/conf/fanotify.conf
@@ -4,8 +4,8 @@
 [fanotify]
 
 # watched directory
-watch-dir="/media"
+#watch-dir="/media"
 
 # watched directory
-#watch-dir="/home"
+watch-dir="/home"
 
