--- a/modules/fanotify/src/Makefile.am
+++ b/modules/fanotify/src/Makefile.am
@@ -1,14 +1,14 @@
 modulesdir=$(libdir)/libuhuru/modules
 modules_LTLIBRARIES=fanotify.la
 
-fanotify_la_SOURCES=fanotify.c fawatch.c fawatch.h
+fanotify_la_SOURCES=fanotify.c monitor.c monitor.h
 
 AM_CPPFLAGS= 
 fanotify_la_LDFLAGS= -module -avoid-version
 fanotify_la_CFLAGS=
 fanotify_la_LIBADD=
 fanotify_la_CFLAGS+= @LIBUHURU_CFLAGS@
-fanotify_la_LIBADD+= @LIBUHURU_LIBS@
+fanotify_la_LIBADD+= @LIBUHURU_LIBS@ -luhuru_core
 fanotify_la_CFLAGS+= @GLIB2_CFLAGS@
 fanotify_la_LIBADD+= @GLIB2_LIBS@
 
