--- a/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj.filters
+++ b/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj.filters
@@ -30,12 +30,24 @@
     <ClCompile Include="..\..\..\libuhuru\src\utils\tcpsock.c">
       <Filter>Source Files\utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_client.c">
+      <Filter>Source Files\utils</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_server.c">
+      <Filter>Source Files\utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h">
       <Filter>Header Files\utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\libuhuru\src\utils\tcpsock.h">
+      <Filter>Header Files\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_client.h">
+      <Filter>Header Files\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_server.h">
       <Filter>Header Files\utils</Filter>
     </ClInclude>
   </ItemGroup>
