Uhuru-av-Windows :: Add UhuruGuard driver project. + sources :: real time scan

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ VS/UhuruAV/UhuruAV/Debug/*
 VS/UhuruAV/clamav/Debug/*
 VS/UhuruAV/UhuruScanCommandLine/Debug/*
 VS/UhuruAV/UhuruAV.v12.suo
+VS/UhuruAV/UhuruGuard Package/x64/Win7Debug/*
+VS/UhuruAV/UhuruGuard/x64/*
+VS/UhuruAV/x64/*
