--- a/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj
+++ b/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj
@@ -54,13 +54,14 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\libuhuru\include;$(SolutionDir)..\..\libuhuru\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <SDLCheck>false</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\json-c\json-c;$(SolutionDir)..\..\libuhuru\include;$(SolutionDir)..\..\libuhuru\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libuhuru_ipc.lib;glib-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;gio-2.0.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>json-c.lib;libuhuru_ipc.lib;glib-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;gio-2.0.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>
       </AdditionalOptions>
     </Link>
@@ -89,12 +90,17 @@
     <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_client.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_server.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\tcpsock.c" />
+    <ClCompile Include="json.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_client.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_server.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\tcpsock.h" />
+    <ClInclude Include="..\..\json-c\json-c\linkhash.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="json.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
