Uhuru-av-Windows :: Add UhuruSvc project + service skeleton : project containing sources for Scan service. Implemented : Service install / start / stop / uninstall . (start on demand).

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ VS/UhuruAV/UhuruAV.v12.suo
 VS/UhuruAV/UhuruGuard Package/x64/Win7Debug/*
 VS/UhuruAV/UhuruGuard/x64/*
 VS/UhuruAV/x64/*
+VS/UhuruAV/UhuruSvc/Debug/*
