Réorganisation des pages et des scripts pour cas d'utilisation réel

--- a/gui/node_webkit/package.json
+++ b/gui/node_webkit/package.json
@@ -2,6 +2,7 @@
  "name": "uhuru-av",
  "main": "index.html",
  "window": {
+   "frame": true,
    "toolbar": true,
    "width": 800,
    "height": 600
