Première réorganisation des scripts et pages html, ajout d'un serveur IPC named pipe, + autres

--- a/gui/node_webkit/package.json
+++ b/gui/node_webkit/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uhuru-av",
- "main": "index.html",
+ "main": "index_window.html",
  "window": {
    "frame": true,
    "toolbar": true,
