--- a/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj
+++ b/VS/UhuruAV/uhuru_scan/uhuru_scan.vcxproj
@@ -87,20 +87,22 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\tools\uhuru-scan.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\getopt.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\utils\json.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_client.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\named_pipe_server.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\utils\scan.c" />
     <ClCompile Include="..\..\..\libuhuru\src\utils\tcpsock.c" />
-    <ClCompile Include="json.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\utils\json.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_client.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\named_pipe_server.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\utils\scan.h" />
     <ClInclude Include="..\..\..\libuhuru\src\utils\tcpsock.h" />
     <ClInclude Include="..\..\json-c\json-c\linkhash.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="json.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
